@@ -23,6 +23,7 @@ xine-lib (1-rc6)
   * support QuickTime 6.3 DLLs
   * improved response time on video grabber ports
   * support mp3 audio in mp4 files
+  * use utf-8 for matroska subtitles
   * next stage of MINGW port - engine library compiles now
 
 xine-lib (1-rc5)  
